--- a/index.html
+++ b/index.html
@@ -1,8 +1,81 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0; url=intent://www.youtube.com/watch?v=WMWziq2mJ0A#Intent;scheme=https;package=com.google.android.youtube;end">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Data Deletion Request - [Your App Name]</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            padding: 20px;
+            background-color: #f9f9f9;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #555;
+        }
+        form {
+            margin-top: 20px;
+        }
+        label {
+            display: block;
+            margin-top: 10px;
+        }
+        input, textarea, button {
+            width: 100%;
+            padding: 10px;
+            margin-top: 5px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+        button {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 <body>
-  <p>If you are not redirected, <a href="intent://www.youtube.com/watch?v=WMWziq2mJ0A#Intent;scheme=https;package=com.google.android.youtube;end">click here</a>.</p>
+    <h1>Data Deletion Request</h1>
+    <p>This page allows you to request the deletion of your account and associated data for the app "<strong>[Your App Name]</strong>".</p>
+    <p>Follow the steps below to submit your request:</p>
+
+    <h2>Steps to Request Data Deletion</h2>
+    <ol>
+        <li>Complete the form below with your account details and any additional information.</li>
+        <li>Our team will verify your request and confirm deletion within [timeframe].</li>
+        <li>If you have any questions, you can contact us at <a href="mailto:support@example.com">support@example.com</a>.</li>
+    </ol>
+
+    <h2>Data Deleted</h2>
+    <p>Upon your request, the following types of data will be deleted:</p>
+    <ul>
+        <li>Account details (e.g., username, email).</li>
+        <li>App usage data and activity history.</li>
+        <li>Other personal information collected by the app.</li>
+    </ul>
+
+    <p>Data retained for legal or compliance purposes (if applicable) will be held for [retention period] and then deleted.</p>
+
+    <h2>Submit Your Request</h2>
+    <form action="[YOUR_BACKEND_ENDPOINT]" method="POST">
+        <label for="email">Email Address:</label>
+        <input type="email" id="email" name="email" placeholder="Enter your email" required>
+
+        <label for="accountId">Account ID (optional):</label>
+        <input type="text" id="accountId" name="accountId" placeholder="Enter your account ID">
+
+        <label for="message">Additional Information (optional):</label>
+        <textarea id="message" name="message" rows="5" placeholder="Provide any additional details"></textarea>
+
+        <button type="submit">Submit Request</button>
+    </form>
 </body>
 </html>
