--- a/index.html
+++ b/index.html
@@ -3,73 +3,101 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sufi Rani English School - Online English Tutoring and Personality Development Services">
+    <meta name="description" content="Sufi Rani English School - Professional Online English Tutoring and Personality Development Services">
     <title>Sufi Rani English School</title>
     <style>
+        /* General Styles */
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f9;
+            background-color: #f7f9fc;
+            color: #333;
+        }
+        a {
+            text-decoration: none;
+            color: #007BFF;
+        }
+        a:hover {
+            color: #0056b3;
         }
         header {
-            background-color: #333;
-            color: #fff;
-            padding: 15px 0;
+            background: linear-gradient(90deg, #0056b3, #007BFF);
+            color: white;
+            padding: 20px 0;
             text-align: center;
         }
         header h1 {
             margin: 0;
+            font-size: 2.5em;
+        }
+        header p {
+            margin: 5px 0 0;
+            font-size: 1.2em;
         }
         nav {
-            background-color: #444;
-            padding: 10px 0;
+            background-color: #007BFF;
             text-align: center;
+            padding: 10px 0;
         }
         nav a {
-            color: #fff;
             margin: 0 15px;
-            text-decoration: none;
-            font-size: 16px;
+            font-size: 1em;
+            color: white;
         }
         nav a:hover {
             text-decoration: underline;
         }
         .container {
-            max-width: 900px;
-            margin: 20px auto;
+            max-width: 1200px;
+            margin: 30px auto;
             padding: 20px;
-            background: #fff;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            background: white;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
         }
-        h2 {
-            color: #333;
+        section {
+            margin-bottom: 30px;
         }
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-            margin-top: 20px;
+        section h2 {
+            font-size: 1.8em;
+            margin-bottom: 10px;
+            color: #0056b3;
+        }
+        section p, ul {
+            font-size: 1.1em;
+            line-height: 1.6;
+        }
+        ul {
+            list-style-type: disc;
+            padding-left: 20px;
         }
         .button {
             display: inline-block;
-            background: #007BFF;
+            background-color: #007BFF;
             color: white;
-            padding: 10px 15px;
-            text-decoration: none;
+            padding: 12px 20px;
+            font-size: 1em;
             border-radius: 5px;
-            font-size: 14px;
+            text-decoration: none;
         }
         .button:hover {
-            background: #0056b3;
+            background-color: #0056b3;
+        }
+        footer {
+            text-align: center;
+            padding: 15px 0;
+            background-color: #0056b3;
+            color: white;
+            font-size: 1em;
+            margin-top: 30px;
         }
     </style>
 </head>
 <body>
     <header>
         <h1>Sufi Rani English School</h1>
-        <p>Online English Tutoring & Personality Development</p>
+        <p>Your Gateway to English Fluency and Confidence</p>
     </header>
     <nav>
         <a href="#about">About</a>
@@ -80,27 +108,28 @@
     <div class="container">
         <section id="about">
             <h2>About Us</h2>
-            <p>Welcome to Sufi Rani English School, your destination for professional English tutoring and personality development. We specialize in online classes and one-on-one sessions tailored for learners of all levels, helping them improve their communication skills and confidence.</p>
+            <p>Welcome to <strong>Sufi Rani English School</strong>, a professional platform dedicated to helping individuals master English and develop essential personality skills. We provide online classes and one-on-one sessions tailored for students, professionals, and learners of all levels. Our mission is to empower you with the skills needed to excel in personal and professional life.</p>
         </section>
         <section id="services">
             <h2>Our Services</h2>
             <ul>
-                <li>Online English Tutoring</li>
-                <li>Personality Development</li>
-                <li>Business English</li>
-                <li>Public Speaking Training</li>
+                <li>Comprehensive English Tutoring for Beginners to Advanced Learners</li>
+                <li>Personality Development and Confidence Building</li>
+                <li>Business English and Professional Communication</li>
+                <li>Public Speaking and Presentation Skills</li>
             </ul>
         </section>
         <section id="youtube">
             <h2>Our YouTube Channel</h2>
-            <p>Explore valuable tips, tutorials, and educational content on our YouTube channel, <strong>Sufi Rani</strong>.</p>
+            <p>Discover exclusive tips, tutorials, and practical lessons on our YouTube channel, <strong>Sufi Rani</strong>. Explore video content designed to improve your English fluency and enhance your confidence in communication.</p>
             <a class="button" href="https://youtube.com/@sufiranii?si=hNEXmK9iE-3ovhh5" target="_blank">Visit Our Channel</a>
         </section>
         <section id="contact">
             <h2>Contact Us</h2>
-            <p>Email: sufirani@gmail.com</p>
-            <p>Phone: +91-XXXXXXXXXX</p>
-            <p>Address: Online Services Only</p>
+            <p>We’d love to hear from you! Reach out to us via the following channels:</p>
+            <p><strong>Email:</strong> sufirani@gmail.com</p>
+            <p><strong>Phone:</strong> +91-XXXXXXXXXX</p>
+            <p><strong>Address:</strong> Online Services Only</p>
         </section>
     </div>
     <footer>
