--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <title>Sufi Rani English School</title>
     <style>
         /* General Styles */
-        body {
-            font-family: 'Arial', sans-serif;
+        * {
             margin: 0;
             padding: 0;
-            background-color: #f7f9fc;
+            box-sizing: border-box;
+        }
+        body {
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(to right, #f7f9fc, #e9ecef);
             color: #333;
+            overflow-x: hidden;
         }
         a {
             text-decoration: none;
@@ -21,76 +25,136 @@
         a:hover {
             color: #0056b3;
         }
+
+        /* Header */
         header {
             background: linear-gradient(90deg, #0056b3, #007BFF);
             color: white;
-            padding: 20px 0;
             text-align: center;
+            padding: 50px 20px;
+            position: relative;
+            animation: fadeInDown 1s ease-out;
         }
         header h1 {
-            margin: 0;
-            font-size: 2.5em;
+            font-size: 3em;
+            margin-bottom: 10px;
         }
         header p {
-            margin: 5px 0 0;
             font-size: 1.2em;
         }
+
+        /* Navigation */
         nav {
-            background-color: #007BFF;
-            text-align: center;
-            padding: 10px 0;
+            display: flex;
+            justify-content: center;
+            padding: 15px 0;
+            background: #007BFF;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            animation: slideIn 1.5s ease-out;
         }
         nav a {
-            margin: 0 15px;
-            font-size: 1em;
             color: white;
+            margin: 0 20px;
+            font-size: 1.1em;
+            text-transform: uppercase;
+            font-weight: bold;
+            transition: color 0.3s ease;
         }
         nav a:hover {
-            text-decoration: underline;
+            color: #FFD700;
         }
+
+        /* Section Containers */
         .container {
             max-width: 1200px;
-            margin: 30px auto;
+            margin: 50px auto;
             padding: 20px;
             background: white;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
+            border-radius: 10px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+            transform: translateY(20px);
+            animation: fadeInUp 1s ease-out;
         }
+
         section {
             margin-bottom: 30px;
         }
         section h2 {
-            font-size: 1.8em;
-            margin-bottom: 10px;
+            font-size: 2em;
+            margin-bottom: 15px;
             color: #0056b3;
+            text-transform: uppercase;
+            border-bottom: 2px solid #007BFF;
+            display: inline-block;
+            padding-bottom: 5px;
         }
         section p, ul {
-            font-size: 1.1em;
-            line-height: 1.6;
+            font-size: 1.2em;
+            line-height: 1.8;
         }
         ul {
             list-style-type: disc;
             padding-left: 20px;
         }
+
+        /* Button */
         .button {
             display: inline-block;
-            background-color: #007BFF;
+            background: #007BFF;
             color: white;
             padding: 12px 20px;
             font-size: 1em;
             border-radius: 5px;
             text-decoration: none;
+            transition: all 0.3s ease;
         }
         .button:hover {
-            background-color: #0056b3;
+            background: #FFD700;
+            color: #333;
+            transform: scale(1.1);
         }
+
+        /* Footer */
         footer {
-            text-align: center;
-            padding: 15px 0;
-            background-color: #0056b3;
+            background: #0056b3;
             color: white;
-            font-size: 1em;
-            margin-top: 30px;
+            text-align: center;
+            padding: 20px 0;
+            margin-top: 50px;
+            position: relative;
+            animation: fadeInUp 1.5s ease-out;
+        }
+
+        /* Animations */
+        @keyframes fadeInDown {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+        @keyframes slideIn {
+            from {
+                transform: translateX(-100%);
+            }
+            to {
+                transform: translateX(0);
+            }
         }
     </style>
 </head>
@@ -102,31 +166,30 @@
     <nav>
         <a href="#about">About</a>
         <a href="#services">Services</a>
-        <a href="#youtube">YouTube Channel</a>
+        <a href="#youtube">YouTube</a>
         <a href="#contact">Contact</a>
     </nav>
     <div class="container">
         <section id="about">
             <h2>About Us</h2>
-            <p>Welcome to <strong>Sufi Rani English School</strong>, a professional platform dedicated to helping individuals master English and develop essential personality skills. We provide online classes and one-on-one sessions tailored for students, professionals, and learners of all levels. Our mission is to empower you with the skills needed to excel in personal and professional life.</p>
+            <p>Welcome to <strong>Sufi Rani English School</strong>, a professional online platform that helps learners master English and develop essential personality skills. We specialize in delivering one-on-one and group sessions tailored to meet individual needs, empowering you to succeed in personal and professional environments.</p>
         </section>
         <section id="services">
             <h2>Our Services</h2>
             <ul>
-                <li>Comprehensive English Tutoring for Beginners to Advanced Learners</li>
-                <li>Personality Development and Confidence Building</li>
+                <li>Comprehensive English Tutoring (Beginner to Advanced)</li>
+                <li>Personality Development and Public Speaking</li>
                 <li>Business English and Professional Communication</li>
-                <li>Public Speaking and Presentation Skills</li>
+                <li>Customized Learning Plans</li>
             </ul>
         </section>
         <section id="youtube">
             <h2>Our YouTube Channel</h2>
-            <p>Discover exclusive tips, tutorials, and practical lessons on our YouTube channel, <strong>Sufi Rani</strong>. Explore video content designed to improve your English fluency and enhance your confidence in communication.</p>
+            <p>Join our YouTube community at <strong>Sufi Rani</strong>, where we provide insightful videos and practical tutorials on English learning and personality enhancement.</p>
             <a class="button" href="https://youtube.com/@sufiranii?si=hNEXmK9iE-3ovhh5" target="_blank">Visit Our Channel</a>
         </section>
         <section id="contact">
             <h2>Contact Us</h2>
-            <p>We’d love to hear from you! Reach out to us via the following channels:</p>
             <p><strong>Email:</strong> sufirani@gmail.com</p>
             <p><strong>Phone:</strong> +91-XXXXXXXXXX</p>
             <p><strong>Address:</strong> Online Services Only</p>
