--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
             background: white;
             border-radius: 10px;
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-            transform: translateY(20px);
-            animation: fadeInUp 1s ease-out;
+            /* Removed transform & fadeInUp to ensure page starts at top on mobile */
         }
 
         section {
@@ -157,7 +156,8 @@
             }
         }
 
-        /* Responsive Enhancements for Mobile */
+        /* Responsive Enhancements for Mobile 
+           Keeping the navigation horizontal in mobile as requested */
         @media (max-width: 768px) {
             header {
                 padding: 30px 20px;
@@ -168,13 +168,10 @@
             header p {
                 font-size: 1em;
             }
-            nav {
-                flex-direction: column;
-                align-items: center;
-            }
+            /* Remove flex-direction column for nav to keep horizontal layout */
             nav a {
-                margin: 8px 0;
-                font-size: 1em;
+                margin: 0 10px;
+                font-size: 0.9em;
             }
             .container {
                 margin: 20px auto;
@@ -222,14 +219,10 @@
         </section>
         <section id="contact">
             <h2>Contact Us</h2>
-            <p><strong>Email:</strong> <a href="mailto:sufirani@gmail.com">sufirani@gmail.com</a></p>
-            <p><strong>Phone:</strong> +91-XXXXXXXXXX</p>
+            <p><strong>Email:</strong> <a href="mailto:Sufirani595@gmail.com">Sufirani595@gmail.com</a></p>
             <p><strong>Address:</strong> Online Services Only</p>
             <br>
-            <!-- Added new clickable contact details -->
-            <p><strong>Alternate Email:</strong> <a href="mailto:Sufirani595@gmail.com">Sufirani595@gmail.com</a></p>
             <p><strong>Telegram:</strong> <a href="https://t.me/sufi_rani" target="_blank">@sufi_rani</a></p>
-            <p><strong>Skype:</strong> <a href="skype:Sufi%20rani?call">Sufi rani</a></p>
         </section>
     </div>
     <footer>
