--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             box-sizing: border-box;
         }
         body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(to right, #f7f9fc, #e9ecef);
+            font-family: 'Open Sans', sans-serif;
+            background: linear-gradient(to right, #f4f7f9, #ecf0f3);
             color: #333;
             overflow-x: hidden;
         }
@@ -74,7 +74,6 @@
             background: white;
             border-radius: 10px;
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-            /* Removed transform & fadeInUp to ensure page starts at top on mobile */
         }
 
         section {
@@ -156,8 +155,7 @@
             }
         }
 
-        /* Responsive Enhancements for Mobile 
-           Keeping the navigation horizontal in mobile as requested */
+        /* Responsive Enhancements for Mobile */
         @media (max-width: 768px) {
             header {
                 padding: 30px 20px;
@@ -168,7 +166,6 @@
             header p {
                 font-size: 1em;
             }
-            /* Remove flex-direction column for nav to keep horizontal layout */
             nav a {
                 margin: 0 10px;
                 font-size: 0.9em;
@@ -190,7 +187,7 @@
 <body>
     <header>
         <h1>Sufi Rani English School</h1>
-        <p>Your Gateway to English Fluency and Confidence</p>
+        <p>Your Premier Gateway to Masterful English and Confident Communication</p>
     </header>
     <nav>
         <a href="#about">About</a>
@@ -201,20 +198,20 @@
     <div class="container">
         <section id="about">
             <h2>About Us</h2>
-            <p>Welcome to <strong>Sufi Rani English School</strong>, a professional online platform that helps learners master English and develop essential personality skills. We specialize in delivering one-on-one and group sessions tailored to meet individual needs, empowering you to succeed in personal and professional environments.</p>
+            <p>Welcome to <strong>Sufi Rani English School</strong>, your trusted platform for mastering the English language and enhancing your personal skills. We specialize in delivering focused one-on-one and group sessions tailored to your individual learning goals, empowering you to excel in both personal and professional settings.</p>
         </section>
         <section id="services">
             <h2>Our Services</h2>
             <ul>
-                <li>Comprehensive English Tutoring (Beginner to Advanced)</li>
-                <li>Personality Development and Public Speaking</li>
-                <li>Business English and Professional Communication</li>
-                <li>Customized Learning Plans</li>
+                <li>Comprehensive English Tutoring (from Basic to Advanced Levels)</li>
+                <li>Personality Development and Public Speaking Mastery</li>
+                <li>Business English and Effective Professional Communication</li>
+                <li>Customized Training Plans for Diverse Learning Needs</li>
             </ul>
         </section>
         <section id="youtube">
             <h2>Our YouTube Channel</h2>
-            <p>Join our YouTube community at <strong>Sufi Rani</strong>, where we provide insightful videos and practical tutorials on English learning and personality enhancement.</p>
+            <p>Explore our <strong>Sufi Rani</strong> YouTube channel for engaging lessons, practical exercises, and valuable tips on elevating your English proficiency and refining your personality.</p>
             <a class="button" href="https://youtube.com/@sufiranii?si=hNEXmK9iE-3ovhh5" target="_blank">Visit Our Channel</a>
         </section>
         <section id="contact">
